update on UI fixes: including, replication of card based design on all asset and portfolio pages, fixes for Movies and animation category on portfolio page, UI improvement on mobile

--- a/src/app/all-assets/all-assets.component.css
+++ b/src/app/all-assets/all-assets.component.css
@@ -310,7 +310,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 		padding: 25px 0 0;
 	}
 	.no-js .projects-carousel, .no-js .post-carousel {
-		border-top: 1px solid #efefef;
+		/* border-top: 1px solid #efefef; */
 		margin: 15px -20px 60px 0;
 		padding: 25px 0 0;
 	}
@@ -483,6 +483,85 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 			.projects-carousel a:hover .title, #portfolio-items > article:hover .title { color: #f15a23; }
             .another-carousel a:hover .title { color: #f15a23; }
+			.image-box {
+
+				/* Here's the trick */
+				box-shadow: inset 0 0 0 100vw rgb(0 0 0 / 25%);
+			  
+				/* Basic background styles */
+				background: var(--image-url) center center no-repeat;
+				background-size: cover;
+			  
+				/* Here's the same styles we applied to our content-div earlier */
+				
+				
+			  }
+
+			  #content img {
+				/* height: auto; */
+				max-width: 100%;
+			}
+
+			.mat-card-header {
+				display: block;
+				flex-direction: row;
+			}
+
+			.jcarousel-clip {
+				display: none !important;
+			}
+			
+			.vid-card {
+				border-radius: 10px; 
+				padding: 0px !important;
+			  }
+
+			  .vid-card > .mat-card-header {
+				display: flex;
+				flex-direction: column;
+			  }
+
+			  #audioSection{
+				overflow: hidden;
+				position: relative;
+				top: 0px;
+				margin: 0px;
+				padding: 0px;
+				left: 0px;
+				width: 0;
+				max-height: 25.7rem;
+			}
+	
+			#artSection {
+				overflow: hidden;
+				position: relative;
+				top: 0px;
+				margin: 0px;
+				padding: 0px;
+				left: 0px;
+				width: 0;
+				max-height: 22.3rem;
+			}
+	
+			.audioStyle{
+				width: 33rem;
+				height: 2rem;
+				background: transparent;
+			}
+	
+			#vidSection {
+				overflow: hidden;
+				position: relative;
+				top: 0px;
+				margin: 0px;
+				padding: 0px;
+				left: 0px;
+				width: 0;
+				max-height: 24rem;
+			}
+	
+			
+
 
             
 
@@ -503,10 +582,119 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
         margin-right: 20%;
     }
 
+	.image-box {
+
+		/* Here's the trick */
+		box-shadow: inset 0 0 0 100vw rgb(0 0 0 / 65%);
+
+		/* Basic background styles */
+		background: var(--image-url) center center no-repeat;
+		background-size: cover;
+
+		/* Here's the same styles we applied to our content-div earlier */
+		color: white;
+		min-height: 60vh;
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly;
+		margin-top: 30px;
+		flex-direction: column;
+		flex-wrap: wrap;
+		align-content: center;
+	}
+
+
+	.projects-carousel audio { 
+		/* margin: -25px auto 20px;  */
+		width: 19rem;
+	}
+
+	.projects-carousel img{
+		object-fit: cover;
+		/* margin: 0; */
+		width: 34rem;
+		height: 17rem;
+		/* margin-left: -32px; */
+		margin-right: 0px;
+		margin-left: 0px !important;
+		/* margin-top: -23px; */
+		margin-top: 0px;
+	}
+
+	.randomCard {
+		width: 9.0rem;
+		height: 11rem;
+		margin-left: 0px;
+		border-radius: 10px;
+	}
+
+	.randomImage {
+		height: 11rem;
+		margin-left: 0px;
+		margin-top: 0px;
+		margin-right: 0px;
+		border-radius: 3px 3px 3px 3px;
+	}
+
+	.audioStyle{
+		width: 10.7rem;
+		height: 2rem;
+		background: transparent;
+	}
+
+	.randomCard-video {
+		width: 9rem;
+		height: 100%;
+		object-fit: cover;
+		margin-left: 0px;
+		margin-top: 0px;
+		/* margin-bottom: -21px; */
+		border-radius: 10px;
+	}				
+
+
+	#audioSection{
+		overflow: hidden;
+		position: relative;
+		top: 0px;
+		margin: 0px;
+		padding: 0px;
+		left: 0px;
+		width: 0;
+		height: 437px;
+	}
+
+	#artSection {
+		overflow: hidden;
+		position: relative;
+		top: 0px;
+		margin: 0px;
+		padding: 0px;
+		left: 0px;
+		width: 0;
+		height: 380px;
+	}
+
+	#vidSection {
+		overflow: hidden;
+		position: relative;
+		top: 0px;
+		margin: 0px;
+		padding: 0px;
+		left: 0px;
+		width: 0;
+		height: 360px;
+	}
+
+	.mat-card-header {
+		display: contents;
+		flex-direction: row;
+	}
+
    
 
     mat-card {
-        width: 13rem;
+        width: 18rem;
     }
 
     .projects-carousel > li {
