--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1452,7 +1452,7 @@ input.placeholder, textarea.placeholder { color: #b0b0b0; }
 
 	.jcarousel-container {
 		/* border-top: 1px solid #efefef; */
-		margin: 45px -20px 80px 0;
+		margin: 35px -10px 60px 0;
 		/* max-width: 100%;
 		padding: 25px 0 0; */
 	}
@@ -1461,6 +1461,7 @@ input.placeholder, textarea.placeholder { color: #b0b0b0; }
 		.jcarousel-clip {
 			overflow: hidden;
 			width: 100%;
+			/* display: none; */
 		}
 
 			.jcarousel-item {
